--- a/messaging-bridge/tsconfig.json
+++ b/messaging-bridge/tsconfig.json
@@ -6,5 +6,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "./hardhat.config.ts",
+    "./scripts",
+    "./test",
+    "./types",
+    "./typechain-types",
+    "./tasks"
+  ]
 }
